Swagger correction
